--- a/style.css
+++ b/style.css
@@ -15,9 +15,39 @@ body {
   margin: 3rem;
 }
 
-h1, h2 {
-  
+section div {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-style: oblique;
+  font-weight: 800;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 1rem;
+
 }
+
+section div button{
+  box-shadow: 0px 1px 0px 0px #1c1b18;
+	background:linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%);
+	background-color:#eae0c2;
+	border-radius:15px;
+	border:2px solid #333029;
+	display:inline-block;
+	cursor:pointer;
+	color:#505739;
+	font-family:Arial;
+	font-size:14px;
+	font-weight:bold;
+	padding:12px 16px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+}
+
+section div button:hover {
+	background:linear-gradient(to bottom, #ccc2a6 5%, #eae0c2 100%);
+	background-color:#ccc2a6;
+}
+
 
 /* header styles */
 
@@ -37,7 +67,6 @@ header p {
 section{
   display: flex;
   flex-direction: row;
-  flex-flow: row;
 }
 
 section article {
@@ -57,7 +86,7 @@ section ul {
 }
 
 h2 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   letter-spacing: -5px;
   margin-bottom: 10px;
 }
